# swain_cli

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  plan.md  pyproject.toml  swain_backend_swagger.json  swain_cli-jre-macos-arm64.tar.gz.sha256  swain_cli-jre-macos-x86_64.tar.gz.sha256
.github/workflows/: build-jre.yml  ci.yml  container.yml  release.yml
Formula/: swain_cli.rb
docs/: DEVELOPMENT.md  RELEASING.md  USAGE.md
examples/: python-config.yaml  swain_backend_swagger.json  ts-axios-config.yaml
scripts/: build-binary.sh  build-jre-linux.sh  build-jre-macos.sh  build-jre-posix.sh  build-jre-windows.ps1  bump-formula.py  check.ps1  check.sh  install.ps1  install.sh  sync-jre-checksums.py
swaggen/: __init__.py  cli.py
swain_cli/: __init__.py  __main__.py  args.py  auth.py  cli.py  config.py  console.py  constants.py  context.py  crudsql.py  engine.py  errors.py  generator.py  http.py  interactive.py  openapi_spec.py  plan.py  plugins.py  prompts.py  schema_cache.py  signatures.py  subprocess_runner.py  swain_api.py  updater.py  urls.py  utils.py  version.py
swain_cli/assets/: swain_cli-jre-macos-arm64.tar.gz.sha256  swain_cli-jre-macos-x86_64.tar.gz.sha256
swain_cli/auth/: __init__.py  handlers.py  remote.py  tenant.py  tokens.py
swain_cli/engine/: __init__.py  archives.py  checksums.py  core.py  downloads.py  handlers.py  jar.py  jre.py  run.py  snapshot.py
tests/: conftest.py  test_auth.py  test_cli.py  test_cli_utils.py  test_config_atomic_writes.py  test_contracts.py  test_crudsql.py  test_engine.py  test_engine_generator_jar_signatures.py  test_generator.py  test_http.py  test_http_boundaries.py  test_invariants_plan_only.py  test_invariants_temp_ownership.py  test_logging_redaction.py  test_openapi_spec.py  test_plan_redaction.py  test_plugins.py  test_profiles.py  test_prompts.py  test_redaction.py  test_release_hygiene.py  test_schema_cache.py  test_subprocess_runner.py  test_swain_api.py  test_updater.py  test_urls.py
