[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swain_cli"
version = "0.2.2"
description = "Zero-setup SDK generator wrapping OpenAPI Generator"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "Swain Labs" }
]
keywords = [
  "openapi",
  "swagger",
  "sdk",
  "codegen",
  "cli"
]
dependencies = [
  "platformdirs>=3.11",
  "httpx>=0.26",
  "pooch>=1.8",
  "typer>=0.12",
  "questionary>=2.0",
  "keyring>=24",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/takifouhal/swain_cli"
Repository = "https://github.com/takifouhal/swain_cli"

[project.scripts]
swain_cli = "swain_cli.cli:main"

[tool.setuptools.package-data]
swain_cli = ["vendor/*.jar", "assets/*"]

[tool.setuptools.packages.find]
include = ["swain_cli*"]
exclude = [
  "tests*",
  "docs*",
  "build*",
  "dist*",
  "sdks*",
  "examples*",
]

[project.optional-dependencies]
dev = [
  "pytest>=7"
]

[tool.pytest.ini_options]
pythonpath = ["."]
