[build-system]
requires = ["setuptools>=64", "wheel", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "swain_cli"
dynamic = ["version"]
description = "Zero-setup SDK generator wrapping OpenAPI Generator"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
  { name = "Swain Labs" }
]
keywords = [
  "openapi",
  "swagger",
  "sdk",
  "codegen",
  "cli"
]
dependencies = [
  "platformdirs>=3.11",
  "httpx>=0.26",
  "pooch>=1.8",
  "typer>=0.12",
  "questionary>=2.0",
  "keyring>=24",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/takifouhal/swain_cli"
Repository = "https://github.com/takifouhal/swain_cli"

[project.scripts]
swain_cli = "swain_cli.cli:main"

#[tool.setuptools.package-data]
# No bundled assets; the CLI downloads JREs and the generator jar at runtime.
# swain_cli = []

[tool.setuptools.packages.find]
include = ["swain_cli*"]
exclude = [
  "tests*",
  "docs*",
  "build*",
  "dist*",
  "sdks*",
  "examples*",
]

[tool.setuptools.dynamic]
version = { attr = "swain_cli.__version__" }

[project.optional-dependencies]
dev = [
  "pytest>=7"
]

lint = [
  "ruff>=0.6; python_version>='3.9'",
  "mypy>=1.8; python_version>='3.9'",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
show_error_codes = true
